// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjektiSearchService should handle query parameters successfully 1`] = `
Object {
  "from": 0,
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "match_bool_prefix": Object {
                  "nimi": "foo",
                },
              },
              Object {
                "match": Object {
                  "nimi": Object {
                    "fuzziness": "AUTO",
                    "minimum_should_match": -1,
                    "query": "foo",
                  },
                },
              },
            ],
          },
        },
        Object {
          "terms": Object {
            "maakunnat.keyword": Array [
              6,
            ],
          },
        },
        Object {
          "terms": Object {
            "vaylamuoto.keyword": Array [
              "tie",
            ],
          },
        },
        Object {
          "terms": Object {
            "vaihe.keyword": Array [
              "EI_JULKAISTU",
              "SUUNNITTELU",
              "EI_JULKAISTU_PROJEKTIN_HENKILOT",
            ],
          },
        },
        Object {
          "terms": Object {
            "suunnittelustaVastaavaViranomainen.keyword": Array [
              "VAYLAVIRASTO",
              "UUDENMAAN_ELY",
            ],
          },
        },
        Object {
          "term": Object {
            "projektiTyyppi.keyword": "TIE",
          },
        },
      ],
    },
  },
  "size": 10,
  "sort": Array [
    Object {
      "paivitetty": Object {
        "order": "desc",
      },
    },
    Object {
      "nimi.keyword": Object {
        "order": "asc",
      },
    },
  ],
}
`;

exports[`ProjektiSearchService should handle query parameters successfully 2`] = `
Object {
  "aggs": Object {
    "projektiTyypit": Object {
      "terms": Object {
        "field": "projektiTyyppi.keyword",
        "size": 10,
      },
    },
  },
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "match_bool_prefix": Object {
                  "nimi": "foo",
                },
              },
              Object {
                "match": Object {
                  "nimi": Object {
                    "fuzziness": "AUTO",
                    "minimum_should_match": -1,
                    "query": "foo",
                  },
                },
              },
            ],
          },
        },
        Object {
          "terms": Object {
            "maakunnat.keyword": Array [
              6,
            ],
          },
        },
        Object {
          "terms": Object {
            "vaylamuoto.keyword": Array [
              "tie",
            ],
          },
        },
        Object {
          "terms": Object {
            "vaihe.keyword": Array [
              "EI_JULKAISTU",
              "SUUNNITTELU",
              "EI_JULKAISTU_PROJEKTIN_HENKILOT",
            ],
          },
        },
        Object {
          "terms": Object {
            "suunnittelustaVastaavaViranomainen.keyword": Array [
              "VAYLAVIRASTO",
              "UUDENMAAN_ELY",
            ],
          },
        },
      ],
    },
  },
  "size": 0,
}
`;

exports[`ProjektiSearchService should handle query parameters successfully for public search 1`] = `
Object {
  "from": 0,
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "range": Object {
            "publishTimestamp": Object {
              "lte": "now",
            },
          },
        },
      ],
    },
  },
  "size": 10,
  "sort": Array [
    Object {
      "paivitetty": Object {
        "order": "desc",
      },
    },
    Object {
      "nimi.keyword": Object {
        "order": "asc",
      },
    },
  ],
}
`;

exports[`ProjektiSearchService should handle successful result 1`] = `
Array [
  Object {
    "muistiinpano": "testi",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tyyppi": "TIE",
    "velho": Object {
      "nimi": "Nimi1",
      "tilaajaOrganisaatio": "Etelä-Pohjanmaan ELY-keskus",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  },
  Object {
    "muistiinpano": "",
    "oid": "2",
    "status": "EI_JULKAISTU",
    "tyyppi": "TIE",
    "velho": Object {
      "nimi": "Nimi2",
      "tilaajaOrganisaatio": "Uudenmaan ELY-keskus",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  },
]
`;
